# Pikzel

./: .clang-format  .clang-tidy  .clang_complete  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Raf.sln  a  imgui.ini  launch.json
.cache/clangd/index/: Application.cpp.0678FFA1E6CDBD82.idx  Application.hpp.AA772661AA8C4678.idx  Camera.cpp.789046212AF28B05.idx  Camera.hpp.07166EEA238ED4CF.idx  FrameBuffer.cpp.E4E57D0F7A09EBAE.idx  FrameBuffer.hpp.0EBE66524EF49C7C.idx  GlaBase.cpp.D1229C1B56FF784C.idx  GlaBase.hpp.48D182007112F044.idx  IndexBuffer.cpp.87477C91B920DDE8.idx  IndexBuffer.hpp.12EBC5765F4522DF.idx  Layer.cpp.0B3586C64BA732BC.idx  Layer.hpp.951CDC75B922A9BD.idx  Mesh.hpp.8237C22B0386D2A9.idx  Project.cpp.A621AD472ED9062F.idx  Project.hpp.530920FF61985ADD.idx  Renderer.cpp.8338254C02080626.idx  Renderer.hpp.EDFB375333920732.idx  Shader.cpp.2AC9D9B707BDBDEA.idx  Shader.hpp.4CC1EC34D497B4A0.idx  Texture.cpp.464B254329768132.idx  Texture.hpp.F58C19475AC73089.idx  Tool.cpp.07B21C4C4BE4ABB6.idx  Tool.hpp.5A590FFF66AEB9FA.idx  UniformBuffer.cpp.2022FBE16F1D3A8C.idx  (+250 more)
Raf/: Raf.vcxproj  Raf.vcxproj.filters  imgui.ini
Raf/shader/: FragShader.frag  VertShader.vert
Raf/src/: Application.cpp  Application.hpp  Brush.cpp  Brush.hpp  Layer.cpp  Layer.hpp  Tool.cpp  Tool.hpp  main.cpp
shader/: frag_shader.frag  vert_shader.vert
src/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Definitions.hpp  Events.cpp  Events.hpp  Layer.cpp  Layer.hpp  PreviewLayer.cpp  PreviewLayer.hpp  Project.cpp  Project.hpp  Tool.cpp  Tool.hpp  VertexBufferControl.cpp  VertexBufferControl.hpp  application.cpp  application.hpp  camera.cpp  camera.hpp  events.cpp  events.hpp  layer.cpp  layer.hpp  layer_control.cpp  layer_control.hpp  main.cpp  preview_layer.cpp  preview_layer.hpp  project.cpp  project.hpp  tool.cpp  tool.hpp  tree.hpp  vertex_buffer_control.cpp  vertex_buffer_control.hpp
src/Gla/: FrameBuffer.cpp  GlaBase.cpp  GlaBase.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
src/gla/: frame_buffer.cpp  frame_buffer.hpp  gla.hpp  gla_base.cpp  gla_base.hpp  group.hpp  index_buffer.cpp  index_buffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  timer.hpp  uniform_buffer.cpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp
(+20 files in other folders)
